--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "react-chess",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Chess game",
   "main": "index.js",
   "private": true,
+  "engines": {
+    "node": "8.0.0"
+  },
   "scripts": {
+    "postinstall": "npm run build",
+    "build": "webpack --config ./build/webpack.config.js --env.production",
     "start": "webpack-dev-server --config ./build/webpack.config.js"
   },
   "keywords": [
