--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.32",
     "classnames": "^2.2.5",
     "express": "^4.16.2",
     "prop-types": "^15.6.0",
