--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-chess",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Chess game",
   "main": "index.js",
   "private": true,
@@ -54,8 +54,6 @@
     "express": "^4.16.2",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-dom": "^16.0.0"
   }
 }
