--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-chess",
   "version": "0.4.0",
   "description": "Chess game",
-  "main": "index.js",
   "private": true,
   "engines": {
     "node": "8.0.0"
@@ -20,6 +19,13 @@
   ],
   "author": "Tony Jin <jsveron23@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jsveron23/react-chess.git"
+  },
+  "bugs": {
+    "url" : "https://github.com/jsveron23/react-chess/issues"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
