Apply Redux store
# Changelogs

- Apply Redux store
- Apply ’react-hot-loader’ v4
- Implement HOC for controlling the game
- Refactoring

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
   "presets": [
-    ["env", { "modules": false, "useBuiltIns": "usage" }],
+    "env",
     "react"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "transform-object-rest-spread",
     "transform-class-properties"
   ]
