--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/jsveron23/react-chess.git"
   },
   "bugs": {
-    "url" : "https://github.com/jsveron23/react-chess/issues"
+    "url": "https://github.com/jsveron23/react-chess/issues"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -48,7 +48,8 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
-    "react-hot-loader": "^3.1.1",
+    "react-hot-loader": "^4.0.0-beta.12",
+    "redux-devtools-extension": "^2.13.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.9.1",
@@ -60,6 +61,9 @@
     "express": "^4.16.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
