--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "transform-object-rest-spread",
     "transform-class-properties"
   ]
