--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config ./build/webpack.config.js"
+    "lint": "eslint ./src",
+    "clean": "rimraf public",
+    "build": "webpack --config ./config/webpack.config.js --env.production --display-error-details",
+    "start": "webpack-dev-server --config ./scripts/webpack.config.js"
   },
   "keywords": [
     "react",
@@ -21,14 +24,14 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "colors": "^1.3.3",
     "css-loader": "^1.0.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-standard": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
