--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "lint": "eslint ./src",
     "clean": "rimraf public",
-    "build": "webpack --config ./config/webpack.config.js --env.production --display-error-details",
+    "build:webpack": "webpack --config ./scripts/webpack.config.js --env.production --display-error-details",
+    "build": "npm run clean && npm run build:webpack",
     "start": "webpack-dev-server --config ./scripts/webpack.config.js"
   },
   "keywords": [
@@ -33,8 +34,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-standard": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
