--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
-    "transform-object-rest-spread",
-    "transform-class-properties"
+    "@babel/plugin-proposal-object-rest-spread",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
