--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "colors": "^1.3.3",
     "css-loader": "^1.0.1",
     "eslint": "^5.12.0",
@@ -41,6 +42,7 @@
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.3.12",
     "react-svg-loader": "^2.1.0",
+    "redux-devtools-extension": "^2.13.7",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
@@ -48,9 +50,13 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
