--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "test": "jest",
     "lint": "eslint ./src",
     "clean": "rimraf public",
     "build:webpack": "webpack --config ./scripts/webpack.config.js --env.production --display-error-details",
@@ -15,6 +16,17 @@
     "react",
     "chess"
   ],
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "./src/setupTests.js"
+    ]
+  },
   "author": "Tony Jin <jsveron23@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -24,10 +36,15 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "colors": "^1.3.3",
     "css-loader": "^1.0.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -36,6 +53,7 @@
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
