--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,20 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "chrome": "70",
+          "ie": "11"
+        }
+      }
+    ],
     "@babel/preset-react"
   ],
   "plugins": [
     "react-hot-loader/babel",
     "@babel/plugin-proposal-object-rest-spread",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
 }
