--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest",
-    "lint": "eslint ./src",
+    "test": "jest --config ./scripts/jest.config.js",
+    "lint": "eslint src",
     "clean": "rimraf public",
     "build:webpack": "webpack --config ./scripts/webpack.config.js --env.production --display-error-details",
     "build": "npm run clean && npm run build:webpack",
@@ -16,17 +16,6 @@
     "react",
     "chess"
   ],
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "setupFiles": [
-      "./src/setupTests.js"
-    ]
-  },
   "author": "Tony Jin <jsveron23@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -58,6 +47,8 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "prettier": "1.15.3",
+    "prettier-eslint": "^8.8.2",
     "react-hot-loader": "^4.3.12",
     "react-svg-loader": "^2.1.0",
     "redux-devtools-extension": "^2.13.7",
