--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.3",
     "prettier-eslint": "^8.8.2",
+    "react-a11y": "^1.1.0",
     "react-hot-loader": "^4.3.12",
     "react-svg-loader": "^2.1.0",
     "redux-devtools-extension": "^2.13.7",
