--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "prettier": "1.15.3",
     "prettier-eslint": "^8.8.2",
     "react-a11y": "^1.1.0",
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "autobind-decorator": "^2.4.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
