--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,8 @@
   "plugins": [
     "react-hot-loader/babel",
     "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-transform-async-to-generator",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
