--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "prettier-eslint": "^8.8.2",
     "react-a11y": "^1.1.0",
     "react-hot-loader": "^4.3.12",
-    "react-svg-loader": "^2.1.0",
     "redux-devtools-extension": "^2.13.7",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
+    "svg-react-loader": "^0.4.6",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
