Control modules by Webpack

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     [
       "@babel/preset-env",
       {
+        "modules": false,
         "targets": {
           "chrome": "70",
           "ie": "11"
