--- a/.babelrc
+++ b/.babelrc
@@ -19,5 +19,20 @@
     "@babel/plugin-transform-async-to-generator",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }]
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "chrome": "70",
+              "ie": "11"
+            }
+          }
+        ]
+      ]
+    }
+  }
 }
