--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "es6": true,
     "jest": true
   },
-  "extends": "standard",
+  "extends": ["standard"],
   "parser": "babel-eslint",
   "rules": {
     "react/jsx-uses-react": 2,
