--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-chess",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "description": "Chess game",
   "main": "index.js",
   "private": true,
@@ -14,7 +14,9 @@
   },
   "keywords": [
     "react",
-    "chess"
+    "chess",
+    "fp",
+    "functional programming"
   ],
   "author": "Tony Jin <jsveron23@gmail.com>",
   "license": "MIT",
