--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "redux-undo": "^1.0.0-beta9-9-7",
     "scu-inspector": "^0.2.0"
   }
 }
