Apply React hooks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
   "rules": {
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2
+    "react/react-in-jsx-scope": 2,
+    "react-hooks/rules-of-hooks": "error"
   },
-  "plugins": ["react"]
+  "plugins": ["react", "react-hooks"]
 }
