--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
@@ -68,8 +69,8 @@
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
