--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-transform-react-jsx-source",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ],
