--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest --config ./tests/jest.config.js",
+    "test": "jest --config ./tests/jest.config.js --detectOpenHandles",
     "update": "npm-check -u",
     "lint": "eslint src",
     "clean": "rimraf public",
