--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@hot-loader/react-dom": "^16.8.2",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
