--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "clean": "rimraf public",
     "build:webpack": "webpack --config ./webpack/webpack.config.js --env.production --display-error-details",
     "build": "npm run clean && npm run build:webpack",
+    "gh-pages": "git subtree push --prefix public origin gh-pages",
+    "deploy": "npm run gh-pages",
     "start": "webpack-dev-server --config ./webpack/webpack.config.js"
   },
   "keywords": [
@@ -48,6 +50,7 @@
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-react-hooks": "^1.2.0",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -61,6 +64,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
     "svg-react-loader": "^0.4.6",
+    "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.2.0"
