--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "scripts": {
     "test": "jest --config ./tests/jest.config.js --detectOpenHandles",
+    "coverage": "jest --config ./tests/jest.config.js --detectOpenHandles --coverage --coverageReporters=text-lcov",
+    "coveralls": "npm run coverage | coveralls",
     "lint": "eslint src",
     "clean": "rimraf public",
     "prebuild": "npm run clean",
@@ -40,6 +42,7 @@
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "colors": "^1.3.3",
+    "coveralls": "^3.0.3",
     "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.7.1",
