--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "extends": ["standard"],
   "parser": "babel-eslint",
   "rules": {
+    "max-len": ["error", { "code": 100 }],
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
