--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
     "svg-react-loader": "^0.4.6",
+    "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
