Restructure Jest tests

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest --config ./tests/jest.config.js --detectOpenHandles",
-    "test:core": "npm test -- ./tests/chess/core",
-    "test:helpers": "npm test -- ./tests/chess/helpers",
-    "test:utils": "npm test -- ./tests/utils",
+    "test": "jest --config ./scripts/jest/jest.config.js --detectOpenHandles",
+    "test:core": "npm test -- ./src/chess/chess/core/tests",
+    "test:helpers": "npm test -- ./src/chess/helpers/tests",
+    "test:utils": "npm test -- ./src/utils/tests",
     "coverage": "npm test -- --coverage --coverageReporters=text-lcov",
     "coveralls": "npm run coverage | coveralls",
     "lint": "eslint src",
