Move files to config directory

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest --config ./scripts/jest/jest.config.js --detectOpenHandles",
+    "test": "jest --config ./config/jest/jest.config.js --detectOpenHandles",
     "coverage": "npm test -- --coverage --coverageReporters=text-lcov",
     "coveralls": "npm run coverage | coveralls",
     "lint": "eslint src",
     "clean": "rimraf public",
     "prebuild": "npm run clean",
-    "bundle:dev": "webpack-dev-server --config ./scripts/webpack/webpack.config.js",
-    "bundle:prod": "webpack --config ./scripts/webpack/webpack.config.js --env.production --display-error-details",
+    "bundle:dev": "webpack-dev-server --config ./config/webpack/webpack.config.js",
+    "bundle:prod": "webpack --config ./config/webpack/webpack.config.js --env.production --display-error-details",
     "build": "npm run bundle:prod",
     "start": "npm run bundle:dev",
     "deploy": "./scripts/github/gh-pages.js",
