--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-spring": "^9.4.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "redux-undo": "^1.0.1",
     "ui-box": "^5.0.0",
     "use-redux-form": "^1.1.2"
   },
