--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "ava": "^4.2.0",
     "classnames": "^2.3.1",
+    "memoize-one": "^6.0.0",
     "prop-types": "^15.8.1",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
