--- a/packages/chess/package.json
+++ b/packages/chess/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-react-svg": "^3.0.3"
   },
   "peerDependencies": {
+    "memoize-one": "^6.0.0",
     "prop-types": "^15.8.1",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
