Resolve few issues

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "clean": "rimraf public",
     "clean:c": "rimraf coverage",
     "prebuild": "npm run clean",
-    "build:pw": "watchexec -w packages npm run build:w",
+    "build:chess": "watchexec -w packages/chess 'npm run build:nc -w chess'",
+    "build:ui": "watchexec -w packages.ui 'npm run build:nc -w ui'",
     "build:w": "npm run build --ws",
     "build": "webpack --env.production --display-error-details",
-    "start": "webpack-dev-server",
+    "start": "./start.sh",
     "test": "npm run clean:c && c8 ava",
     "test:open": "open ./coverage/index.html",
     "preinstall": "npm run build:w"
@@ -49,6 +50,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
     "c8": "^7.11.2",
+    "concurrently": "^7.1.0",
     "core-js": "^3.22.3",
     "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
