--- a/packages/chess/package.json
+++ b/packages/chess/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "clean": "rimraf lib es",
     "build": "npm run clean && rollup --config ./rollup.config.js",
+    "build:nc": "rollup --config ./rollup.config.js",
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js"
   },
