--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "clean": "rimraf lib es",
     "build": "npm run clean && rollup --config ./rollup.config.js",
+    "build:nc": "rollup --config ./rollup.config.js",
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js"
   },
