--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js",
     "clean": "rimraf public",
-    "clean:c": "rimraf coverage",
+    "clean:test": "rimraf coverage",
     "prebuild": "npm run clean",
-    "build:chess": "watchexec -w packages/chess 'npm run build:nc -w chess'",
-    "build:ui": "watchexec -w packages.ui 'npm run build:nc -w ui'",
-    "build:w": "npm run build --ws",
+    "build:chess": "npm run build -w chess",
+    "build:ui": "npm run build -w ui",
+    "build:chess:watch": "watchexec -w packages/chess 'npm run build:nc -w chess'",
+    "build:ui:watch": "watchexec -w packages/ui 'npm run build:nc -w ui'",
+    "build:ws": "npm run build --ws",
     "build": "webpack --env.production --display-error-details",
+    "dev": "webpack-dev-server",
     "start": "./start.sh",
-    "test": "npm run clean:c && c8 ava",
+    "test": "npm run clean:test && c8 ava",
     "test:open": "open ./coverage/index.html",
-    "preinstall": "npm run build:w"
+    "preinstall": "npm run build:ws"
   },
   "keywords": [
     "react",
