Resolve Check functions issues

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prebuild": "npm run clean",
     "build:chess": "npm run build -w chess",
     "build:ui": "npm run build -w ui",
-    "build:chess:watch": "watchexec -w packages/chess 'npm run build:nc -w chess'",
-    "build:ui:watch": "watchexec -w packages/ui 'npm run build:nc -w ui'",
+    "build:chess:watch": "npm run build:nc -w chess",
+    "build:ui:watch": "npm run build:nc -w ui",
     "build:ws": "npm run build --ws",
     "build": "webpack --env.production --display-error-details",
     "dev": "webpack-dev-server",
