Clean packages bundling code for speed up

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "prebuild": "npm run clean",
     "build:chess": "npm run build -w chess",
     "build:ui": "npm run build -w ui",
-    "build:chess:watch": "npm run build:nc -w chess",
-    "build:ui:watch": "npm run build:nc -w ui",
+    "build:chess:watch": "npm run build:watch -w chess",
+    "build:ui:watch": "npm run build:watch -w ui",
     "build:ws": "npm run build --ws",
-    "build": "webpack --env.production --display-error-details",
+    "build": "npm run build:ws && webpack --env.production --display-error-details",
     "dev": "webpack-dev-server",
     "start": "./start.sh",
+    "pretest": "npm run clean:test",
     "test": "npm run clean:test && c8 ava",
     "test:open": "open ./coverage/index.html",
     "preinstall": "npm run build:ws"
