--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,8 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
-    "rollup-plugin-react-svg": "^3.0.3"
+    "rollup-plugin-react-svg": "^3.0.3",
+    "rollup-plugin-uglify": "^6.0.4"
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
@@ -24,8 +25,8 @@
   },
   "scripts": {
     "clean": "rimraf lib es",
-    "build": "npm run clean && rollup --config ./rollup.config.js",
-    "build:nc": "rollup -c -w",
+    "build": "npm run clean && NODE_ENV=production rollup --config ./rollup.config.js",
+    "build:watch": "rollup -c -w",
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js"
   },
