--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "2.0.0",
   "description": "Chess game",
   "main": "index.js",
+  "engines": {
+    "npm": ">=8.5.0",
+    "node": ">=14.0.0"
+  },
   "private": true,
   "scripts": {
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js",
     "clean": "rimraf public",
     "clean:test": "rimraf coverage",
-    "prebuild": "npm run clean",
     "build:chess": "npm run build -w chess",
     "build:ui": "npm run build -w ui",
     "build:chess:watch": "npm run build:watch -w chess",
     "build:ui:watch": "npm run build:watch -w ui",
-    "build:ws": "npm run build --ws",
-    "build": "npm run build:ws && webpack --env.production --display-error-details",
-    "dev": "webpack-dev-server",
+    "build": "webpack --mode production",
+    "dev": "webpack server --mode development",
     "start": "./start.sh",
     "pretest": "npm run clean:test",
     "test": "npm run clean:test && c8 ava",
     "test:open": "open ./coverage/index.html",
-    "preinstall": "npm run build:ws"
+    "postinstall": "npm run build --ws"
   },
   "keywords": [
     "react",
