--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "clean": "rimraf lib es",
-    "build": "npm run clean && NODE_ENV=production rollup --config ./rollup.config.js",
+    "build": "npm run clean && NODE_ENV=production rollup -c",
     "build:watch": "rollup -c -w",
     "lint": "eslint 'src/**/*.js'",
     "prettier": "prettier -c src/**/*.js"
