--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "private": true,
   "scripts": {
-    "lint": "eslint 'src/**/*.js'",
-    "prettier": "prettier -c src/**/*.js",
+    "lint": "eslint '**/src/**/*.js'",
+    "prettier": "prettier -c **/src/**/*.js",
     "clean": "rimraf public",
     "clean:test": "rimraf coverage",
     "build:chess": "npm run build -w chess",
