--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-spinners": "^0.12.0",
     "react-spring": "^9.4.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
