--- a/package.json
+++ b/package.json
@@ -86,12 +86,14 @@
     "ava": "^4.2.0",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0",
+    "peerjs": "^1.4.4",
     "prop-types": "^15.8.1",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-spinners": "^0.12.0",
     "react-spring": "^9.4.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
