--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-router-dom": "^6.2.1",
     "react-spinners": "^0.12.0",
     "react-spring": "^9.4.4",
+    "react-use-measure": "^2.1.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
