Implement compress current playing data

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^8.4.7",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
