--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "rimraf": "^3.0.2",
+    "sinon": "^14.0.0",
     "style-loader": "^3.3.1",
     "svg-react-loader": "^0.4.6",
     "terser-webpack-plugin": "^5.3.1",
