--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/register": "^7.17.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
+    "babel-plugin-rewire": "^1.2.0",
     "c8": "^7.11.2",
     "concurrently": "^7.1.0",
     "core-js": "^3.22.3",
