--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
     "react-spinners": "^0.12.0",
     "react-spring": "^9.4.4",
     "react-use-measure": "^2.1.1",
@@ -103,8 +102,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "redux-undo": "^1.0.1",
-    "ui-box": "^5.0.0",
-    "use-redux-form": "^1.1.2"
+    "ui-box": "^5.0.0"
   },
   "workspaces": [
     "packages/chess",
