--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "dependencies": {
     "ava": "^4.2.0",
     "classnames": "^2.3.1",
+    "fast-deep-equal": "^3.1.3",
     "memoize-one": "^6.0.0",
     "peerjs": "^1.4.4",
     "prop-types": "^15.8.1",
