--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "concurrently": "^7.1.0",
     "core-js": "^3.22.3",
     "css-loader": "^6.6.0",
+    "esbuild": "^0.14.41",
     "eslint": "^8.9.0",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.25.4",
