--- a/packages/chess/package.json
+++ b/packages/chess/package.json
@@ -10,12 +10,13 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@lopatnov/rollup-plugin-uglify": "^2.1.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-react-svg": "^3.0.0",
-    "rollup-plugin-uglify": "^5.0.2"
+    "terser": "^5.13.1"
   },
   "peerDependencies": {
     "memoize-one": "^6.0.0",
