--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:ui": "npm run build -w ui",
     "build:chess:watch": "npm run build:watch -w chess",
     "build:ui:watch": "npm run build:watch -w ui",
-    "build": "npm run build --ws && webpack --mode production",
+    "build": "npm run clean && npm run build --ws && webpack --mode production",
     "dev": "webpack server --mode development",
     "start": "./start.sh",
     "pretest": "npm run clean:test",
@@ -51,6 +51,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/register": "^7.17.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-rewire": "^1.2.0",
     "c8": "^7.11.2",
