--- a/ai/Cargo.toml
+++ b/ai/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.74"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+wasm-bindgen = "0.2.80"
 web-sys = { version = "0.3.57", features = ['console'] }
+js-sys = "0.3.57"
 
 [profile.release]
 lto = true
-opt-level = "s"
