Resolve 1 vs CPU match issue

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "build:ui:watch": "npm run build:watch -w ui",
     "build": "npm run build --ws && webpack --mode production",
     "dev": "webpack server --mode development",
+    "prod": "npm run clean && npm run build && http-server",
+    "prod:open": "npm run prod -- -o",
     "start": "./start.sh",
     "pretest": "npm run clean:test",
     "test": "npm run clean:test && c8 ava",
@@ -67,6 +69,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "mini-css-extract-plugin": "^2.5.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^8.4.7",
