--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,8 +20,10 @@
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-spinners": "^0.12.0",
     "ui-box": "^5.0.0"
   },
   "scripts": {
